unpackaged/main/default/objects/Role_Budget__c/Role_Budget__c.object-meta.xml
<CustomObject>
    <label>Role Budget</label>
    <nameField>
        <displayFormat>RB-{00000}</displayFormat>
        <label>Role Budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>