unpackaged/main/default/objects/Role_Budget__c/fields/Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hours__c</fullName>
    <label>Assigned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>