unpackaged/main/default/objects/Role_Budget__c/fields/Available_Hours_to_Assign__c.field-meta.xml
<CustomField>
    <fullName>Available_Hours_to_Assign__c</fullName>
    <formula>Budget_Incl_Tolerance__c   - Assigned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Hours to Assign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>