unpackaged/main/default/objects/Role_Budget__c/fields/Available_Hours_to_Request__c.field-meta.xml
<CustomField>
    <fullName>Available_Hours_to_Request__c</fullName>
    <formula>(  Budget_Incl_Tolerance__c - Requested_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Hours to Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>