unpackaged/main/default/objects/Role_Budget__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Budget__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Budget__c</referenceTo>
    <relationshipLabel>Role Budgets</relationshipLabel>
    <relationshipName>Role_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>