unpackaged/main/default/objects/Role_Budget__c/fields/Budget_Detail__c.field-meta.xml
<CustomField>
    <fullName>Budget_Detail__c</fullName>
    <formula>TEXT(Role__c) + ' - ' +  TEXT(Rate__c)+ ' ' + TEXT(CurrencyIsoCode) + ' - ' +  TEXT(Hours_Budget__c)+'h'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Detail</label>
    <type>Text</type>
</CustomField>