unpackaged/main/default/objects/Role_Budget__c/fields/Budget_Incl_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Incl_Tolerance__c</fullName>
    <formula>Hours_Budget__c + (Hours_Budget__c * Budget_Tolerance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Incl Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>