unpackaged/main/default/objects/Role_Budget__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <formula>If (  
       OR (
              Project_Task_Hours__c &gt; Budget_Incl_Tolerance__c,
              Assigned_Hours__c &gt; Project_Task_Hours__c  
              
           ),
             '🔴 Check Role Budget!',"🟢")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display a Red indicator if there are more task hours assigned than budget ir assigned hours &lt;&gt; task hours.</inlineHelpText>
    <label>Budget Status</label>
    <type>Text</type>
</CustomField>