unpackaged/main/default/objects/Role_Budget__c/fields/Budget_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Tolerance__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter a % tolernance that the role budget can be exceeded by.</inlineHelpText>
    <label>Budget Tolerance %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>