unpackaged/main/default/objects/Role_Budget__c/fields/Credited_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credited_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer Project: A credited hours role budget is required for FoC Investment or Business Development.
Internal Project: A credited hours role budget is required for Field Innovation projects.</inlineHelpText>
    <label>Credited Hours?</label>
    <type>Checkbox</type>
</CustomField>