unpackaged/main/default/objects/Role_Budget__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <description>Hours Budget - Timecard Hours</description>
    <formula>Budget_Incl_Tolerance__c  -  Timecard_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours Budget - Timecard Hours</inlineHelpText>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>