unpackaged/main/default/objects/Role_Budget__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>