unpackaged/main/default/objects/Role_Budget__c/fields/Project_Task_Hours__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Hours__c</fullName>
    <description>Rollup of hours from PTA assigned to the Role Budget.</description>
    <label>Project Task Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>