unpackaged/main/default/objects/Role_Budget__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <inlineHelpText>This reference is populated on Tasks and will automaticaly link the role budget to the task and task assignments.</inlineHelpText>
    <label>Role Budget Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>