unpackaged/main/default/objects/Role_Budget__c/fields/Requested_Hours__c.field-meta.xml
<CustomField>
    <fullName>Requested_Hours__c</fullName>
    <label>Requested Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>