unpackaged/main/default/objects/Role_Budget__c/fields/Role_Budget_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget_Name__c</fullName>
    <description>Role Budget Name used for Reporting</description>
    <formula>Name + " - " + TEXT(Role__c)+ " - " + TEXT(Rate__c)+ " - " + Reference__c</formula>
    <label>Role Budget Name</label>
    <type>Text</type>
</CustomField>