unpackaged/main/default/objects/Role_Budget__c/fields/Timecard_Hours__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Hours__c</fullName>
    <label>Timecard Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>