unpackaged/main/default/objects/Role_Budget__c/validationRules/Bill_Rate_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_Rate_is_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>IsNUll( Rate__c )</errorConditionFormula>
    <errorMessage>Bill Rate must be populated, if no bill rate is available set this to 0.00.</errorMessage>
</ValidationRule>