unpackaged/main/default/objects/Role_Budget__c/validationRules/BIll_Rate_Populated_When_Credited.validationRule-meta.xml
<ValidationRule>
    <fullName>BIll_Rate_Populated_When_Credited</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( Credited_Hours__c ,
       Rate__c &gt; 0
    )</errorConditionFormula>
    <errorMessage>Bill Rate should not be populated if Role Budget is for Credited Hours.</errorMessage>
</ValidationRule>