unpackaged/main/default/objects/Role_Budget__c/validationRules/Check_Available_Resource_Req_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Available_Resource_Req_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>AND (IsNew(),
Requested_Hours__c &gt;   Budget_Incl_Tolerance__c 
)</errorConditionFormula>
    <errorMessage>There are no available hours remaining to make this request. Please review the role budget.</errorMessage>
</ValidationRule>