unpackaged/main/default/objects/Role_Budget__c/validationRules/Check_Available_TaskAssignment_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Available_TaskAssignment_Hours</fullName>
    <active>false</active>
    <description>There are no available hours remaining to assign these hours. Please review the role budget.</description>
    <errorConditionFormula>Project_Task_Hours__c &gt;   Budget_Incl_Tolerance__c</errorConditionFormula>
    <errorMessage>There are no available hours remaining to assign these hours. Please review the role budget.pta</errorMessage>
</ValidationRule>