unpackaged/main/default/objects/Role_Budget__c/validationRules/Role_Budget_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Budget_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Project__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Currency of the Role Budget must the same as the Project Currency.</errorMessage>
</ValidationRule>