unpackaged/main/default/objects/Role_Budget__c/validationRules/Timecard_Hours_Greater_than_Hours_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Timecard_Hours_Greater_than_Hours_Budget</fullName>
    <active>true</active>
    <errorConditionFormula>Timecard_Hours__c &gt;   Budget_Incl_Tolerance__c</errorConditionFormula>
    <errorMessage>Timecard Hours cannot be greater than Role Budget Hours.</errorMessage>
</ValidationRule>