unpackaged/main/default/objects/Role_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Role__c</columns>
    <columns>Reference__c</columns>
    <columns>Rate__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Hours_Budget__c</columns>
    <columns>Budget_Tolerance__c</columns>
    <columns>Requested_Hours__c</columns>
    <columns>Assigned_Hours__c</columns>
    <columns>Timecard_Hours__c</columns>
    <columns>Project_Task_Hours__c</columns>
    <columns>Available_Hours_to_Assign__c</columns>
    <columns>Hours_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>